--- a/login.html
+++ b/login.html
@@ -36,13 +36,15 @@
             <input type="email" placeholder="Enter your Email">
             <input type="password" placeholder="Enter your Password">
 
-            <button class="login-btn">Login Now</button>
+            <!-- Updated Login Button to go to dashboard.html -->
+            <button type="button" class="login-btn" onclick="window.location.href='dashboard.html'">Login Now</button>
 
         </form>
 
         <div class="links-row">
             <a class="forgot" href="#">Forgot Password?</a>
-            <a class="register" href="#">Need account? Register?</a>
+            <a class="register" href="signup.html">Need an account? Register</a>
+
         </div>
 
         <div class="social-buttons">
