--- a/signup.html
+++ b/signup.html
@@ -42,12 +42,16 @@
             <input type="password" placeholder="Enter your Confirm Password">
             <input type="text" placeholder="Enter your Phone Number">
 
-            <button class="create-btn">Create Account</button>
+            <!-- FIXED BUTTON -->
+            <button type="button" class="create-btn" onclick="window.location.href='login.html'">
+                Create Account
+            </button>
+
         </form>
 
         <p class="login-text">
             Already have an account?
-            <a href="#">Login</a>
+           <a href="login.html">Login</a>
         </p>
 
         <div class="or-line">or</div>
