--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <header>
     <div class="container header-container">
         <a href="#" class="logo-link">
-            <img src="my logo.png" alt="WattsUp Logo" class="nav-logo-img">
+            <img src="resources/my logo.png" alt="WattsUp Logo" class="nav-logo-img">
         </a>
 
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <a href="#">Home</a></li>
+                <a href="#">About Us</a></li>
+                <a href="#">Contact</a></li>
             </ul>
         </nav>
 
@@ -42,7 +42,7 @@
             <p>Monitor usage, track spending, and save money with ease.</p>
         </div>
         <div class="hero-image">
-            <img src="sss.png" alt="Energy Graph Illustration">
+            <img src="resources/sss.png" alt="Energy Graph Illustration">
         </div>
     </section>
 
@@ -52,15 +52,15 @@
 
         <div class="benefits-grid">
             <div class="b-card">
-                <img src="calcu time.png" alt="Instant Bill Estimates">
+                <img src="resources/calcu time.png" alt="Instant Bill Estimates">
                 <h3>Instant Bill Estimates</h3>
             </div>
             <div class="b-card">
-                <img src="task track.png" alt="Track Monthly Usage">
+                <img src="resources/task track.png" alt="Track Monthly Usage">
                 <h3>Track Monthly Usage</h3>
             </div>
             <div class="b-card">
-                <img src="data privz.png" alt="Data Privacy Guaranteed">
+                <img src="resources/data privz.png" alt="Data Privacy Guaranteed">
                 <h3>Data Privacy Guaranteed</h3>
             </div>
         </div>
@@ -72,19 +72,19 @@
 
         <div class="features-container">
             <div class="feature-step">
-                <img src="inp data.png" alt="Input Data">
+                <img src="resources/inp data.png" alt="Input Data">
                 <h3>1. Input your data</h3>
                 <p>Simply enter your latest power consumption and rate.</p>
             </div>
 
             <div class="feature-step">
-                <img src="get ins.png" alt="Get Instant Result">
+                <img src="resources/get ins.png" alt="Get Instant Result">
                 <h3>2. Get Instant Result</h3>
                 <p>The app instantly computes your total bill with a complete breakdown.</p>
             </div>
 
             <div class="feature-step">
-                <img src="track save.png" alt="Track & Save">
+                <img src="resources/track save.png" alt="Track & Save">
                 <h3>3. Track & Save</h3>
                 <p>View reports and discover ways to lower your next bill.</p>
             </div>
@@ -112,7 +112,7 @@
 
             <div class="t-card">
                 <div class="stars"><i class="fa-solid fa-star"></i> 4.3</div>
-                <p>I finally understand my bill! Saved $25 last month.</p>
+                <p>I finally understand my bill! Saved ₱25 last month.</p>
                 <span class="user-name">- Mark Cyrell Quinio</span>
             </div>
         </div>
@@ -129,7 +129,7 @@
 
 <footer>
     <div class="container footer-container">
-        <img src="my logo.png" class="footer-logo-img">
+        <img src="resources/my logo.png" class="footer-logo-img">
         <div class="copyright">
             Copy Right ©2025 WattsUp!. All rights reserved.
         </div>
