--- a/calculator.html
+++ b/calculator.html
@@ -11,13 +11,13 @@
   <div class="layout">
 
     <aside class="sidebar">
-      <img class="logo" src="my logo.png" alt="WattsUp Logo">
+      <img class="logo" src="resources/my logo.png" alt="WattsUp Logo">
       <nav class="menu">
-        <a href="dashboard.html"><img src="dashboard icon.png" class="menu-icon"> Dashboard</a>
-        <a href="calculator.html"><img src="calcu icon.png" class="menu-icon"> Calculator</a>
-        <a href="save-results.html"><img src="results icon.png" class="menu-icon"> Results</a>
-        <a href="profile.html"><img src="profile icon.png" class="menu-icon"> Profile</a>
-        <a href="index.html"><img src="logout icon.png" class="menu-icon"> Logout</a>
+        <a href="dashboard.html"><img src="resources/dashboard icon.png" class="menu-icon"> Dashboard</a>
+        <a href="calculator.html"><img src="resources/calcu icon.png" class="menu-icon"> Calculator</a>
+        <a href="save-results.html"><img src="resources/results icon.png" class="menu-icon"> Results</a>
+        <a href="profile.html"><img src="resources/profile icon.png" class="menu-icon"> Profile</a>
+        <a href="index.html" class="logout-link"><img src="resources/logout icon.png" class="menu-icon"> Logout</a>
       </nav>
     </aside>
 
@@ -25,6 +25,7 @@
     <main class="main calculator-main">
 
       <h1 class="page-title">Electricity Bill Calculator</h1>
+      <p id="userGreeting" style="font-size:0.95rem;color:#666;margin-bottom:1rem;"></p>
 
       <!-- SUMMARY SECTION -->
       <div class="summary-box">
@@ -38,27 +39,31 @@
         <div class="input-card">
           <input type="text" id="month" placeholder="Input Month:">
           <input type="number" id="kwh" placeholder="Power Consumption (kWh):">
-          <input type="number" id="rate" placeholder="Cost per kWh ($):">
+          <input type="number" id="rate" placeholder="Cost per kWh (₱):">
 
           <button class="calculate-btn" onclick="calculateBill()">Calculate</button>
         </div>
 
         <!-- RESULT CARD (right) -->
-        <div class="result-section">
+          <div class="result-section">
           <div class="result-card">
             <h3>Estimated Total Bill:</h3>
-            <h1 id="totalDisplay">$0.00</h1>
+            <h1 id="totalDisplay">₱0.00</h1>
             <p>Based on Power Consumption * Rate</p>
           </div>
+          <!-- Supabase connection/auth status (non-intrusive) -->
+          <div id="supabaseStatus" aria-live="polite" style="font-size:0.9rem;margin-top:8px;color:#444"></div>
 
-          <!-- SAVE BUTTON placed exactly like your screenshot -->
-          <button class="save-btn">Save Result</button>
         </div>
 
       </div>
     </main>
   </div>
 
+  <!-- Supabase CDN - Must be loaded first -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="js/supabase-config.js"></script>
+  <script src="js/supabase-client.js"></script>
   <script src="calculator.js"></script>
 </body>
 </html>
