--- a/dashboard.html
+++ b/dashboard.html
@@ -7,17 +7,23 @@
   <link rel="stylesheet" href="dashboard.css" />
 </head>
 <body>
+  <!-- Supabase CDN - Must be loaded first -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="js/supabase-config.js"></script>
+  <script src="js/supabase-client.js"></script>
+  <script src="js/auth.js"></script>
+  
   <div class="layout">
 
     <!-- SIDEBAR -->
     <aside class="sidebar">
-      <img class="logo" src="my logo.png" alt="WattsUp Logo" />
+      <img class="logo" src="resources/my logo.png" alt="WattsUp Logo" />
       <nav class="menu">
-        <a href="dashboard.html"><img src="dashboard icon.png" class="menu-icon" /> Dashboard</a>
-        <a href="calculator.html"><img src="calcu icon.png" class="menu-icon" /> Calculator</a>
-        <a href="save-results.html"><img src="results icon.png" class="menu-icon" /> Results</a>
-        <a href="profile.html"><img src="profile icon.png" class="menu-icon" /> Profile</a>
-        <a href="index.html"><img src="logout icon.png" class="menu-icon" /> Logout</a>
+        <a href="dashboard.html"><img src="resources/dashboard icon.png" class="menu-icon" /> Dashboard</a>
+        <a href="calculator.html"><img src="resources/calcu icon.png" class="menu-icon" /> Calculator</a>
+        <a href="save-results.html"><img src="resources/results icon.png" class="menu-icon" /> Results</a>
+        <a href="profile.html"><img src="resources/profile icon.png" class="menu-icon" /> Profile</a>
+        <a href="index.html" class="logout-link"><img src="resources/logout icon.png" class="menu-icon" /> Logout</a>
       </nav>
     </aside>
 
@@ -26,13 +32,14 @@
       <header class="header">
         <h1>Hello, Marchael! 👋</h1>
         <p>Welcome to WattsUp! Get Started With Our Features</p>
+        <!-- Local results are persisted in-browser; no sync UI shown -->
       </header>
 
       <!-- BILL CARD -->
       <section class="bill-card">
         <p class="label">LAST MONTH’S BILL:</p>
-        <h2 class="amount">$151.2</h2>
-        <p class="kwh">420 kWh</p>
+        <h2 class="amount">₱0.00</h2>
+        <p class="kwh">0 kWh</p>
       </section>
 
       <!-- RECENT BILLS -->
@@ -53,18 +60,103 @@
               <th>Total</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>October</td><td>2025</td><td>4:30 pm</td><td>420 kWh</td><td>$0.36</td><td>$151.2</td>
-            </tr>
-            <tr>
-              <td>December</td><td>2024</td><td>7:00 am</td><td>420 kWh</td><td>$0.36</td><td>$152.1</td>
-            </tr>
-            <tr>
-              <td>September</td><td>2023</td><td>3:30 pm</td><td>420 kWh</td><td>$0.36</td><td>$153.4</td>
-            </tr>
+          <tbody id="recentBody">
           </tbody>
         </table>
+        <script>
+          function formatCurrency(n){ return '₱ ' + Number(n).toFixed(2); }
+
+          // Load and display user's name in greeting
+          async function loadUserGreeting(){
+            try{
+              const user = await getCurrentUser();
+              if (user){
+                const fullName = user.user_metadata?.full_name || user.email?.split('@')[0] || 'User';
+                const firstName = fullName.split(' ')[0];
+                const greeting = document.querySelector('.header h1');
+                if (greeting){
+                  greeting.innerText = `Hello, ${firstName}! 👋`;
+                }
+              }
+            }catch(e){
+              console.warn('Error loading user greeting:', e);
+            }
+          }
+
+          async function loadDashboardRecent(){
+            const tbody = document.getElementById('recentBody');
+            tbody.innerHTML = '';
+
+            // Load user greeting
+            await loadUserGreeting();
+
+            // Prefer Supabase when authenticated
+            try{
+              if (window.getCurrentUser && typeof window.getCurrentUser === 'function'){
+                const { user } = await window.getCurrentUser();
+                if (user){
+                  const res = await window.fetchRecentCalculations(3);
+                  if (res && res.data && res.data.length){
+                    const slice = res.data;
+                    const latest = slice[0];
+                    document.querySelector('.bill-card .amount').innerText = formatCurrency(latest.total);
+                    document.querySelector('.bill-card .kwh').innerText = latest.kwh + ' kWh';
+
+                    slice.forEach(rec => {
+                      const date = new Date(rec.created_at || rec.timestamp);
+                      const time = date.toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'});
+                      const year = date.getFullYear();
+                      const tr = document.createElement('tr');
+                      tr.innerHTML = `
+                        <td>${rec.month}</td>
+                        <td>${year}</td>
+                        <td>${time}</td>
+                        <td>${rec.kwh} kWh</td>
+                        <td>${formatCurrency(rec.rate)}</td>
+                        <td>${formatCurrency(rec.total)}</td>
+                      `;
+                      tbody.appendChild(tr);
+                    });
+                    return;
+                  }
+                }
+              }
+            }catch(e){
+              console.warn('Supabase load failed, falling back to localStorage', e);
+            }
+
+            // fallback to localStorage (namespaced per user when available)
+            const saved = (window.getLocalSavedBills) ? await window.getLocalSavedBills() : JSON.parse(localStorage.getItem('savedBills') || '[]');
+            if(saved && saved.length > 0){
+              const latest = saved[0];
+              document.querySelector('.bill-card .amount').innerText = formatCurrency(latest.total);
+              document.querySelector('.bill-card .kwh').innerText = latest.kwh + ' kWh';
+            }
+
+            if(!saved || saved.length === 0) return;
+            const slice = saved.slice(0,3);
+            slice.forEach(rec => {
+              const date = new Date(rec.timestamp);
+              const time = date.toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'});
+              const year = date.getFullYear();
+              const tr = document.createElement('tr');
+              tr.innerHTML = `
+                <td>${rec.month}</td>
+                <td>${year}</td>
+                <td>${time}</td>
+                <td>${rec.kwh} kWh</td>
+                <td>${formatCurrency(rec.rate)}</td>
+                <td>${formatCurrency(rec.total)}</td>
+              `;
+              tbody.appendChild(tr);
+            });
+          }
+
+          document.addEventListener('DOMContentLoaded', async () => {
+            await initAuth(); // Protect page - redirect if not authenticated
+            loadDashboardRecent();
+          });
+        </script>
       </section>
 
     </main>
