--- a/view_all_bill.html
+++ b/view_all_bill.html
@@ -8,24 +8,31 @@
   <link rel="stylesheet" href="view_all_bill.css">
 </head>
 <body>
+  <!-- Supabase CDN - Must be loaded first -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="js/supabase-config.js"></script>
+  <script src="js/supabase-client.js"></script>
+  <script src="js/auth.js"></script>
+  
   <div class="layout">
 
     <aside class="sidebar">
-      <img class="logo" src="my logo.png" alt="WattsUp Logo">
+      <img class="logo" src="resources/my logo.png" alt="WattsUp Logo">
       <nav class="menu">
-        <a href="dashboard.html"><img src="dashboard icon.png" class="menu-icon"> Dashboard</a>
-        <a href="calculator.html"><img src="calcu icon.png" class="menu-icon"> Calculator</a>
-        <a href="save-results.html"><img src="results icon.png" class="menu-icon"> Results</a>
-        <a href="profile.html"><img src="profile icon.png" class="menu-icon"> Profile</a>
-        <a href="index.html"><img src="logout icon.png" class="menu-icon"> Logout</a>
+        <a href="dashboard.html"><img src="resources/dashboard icon.png" class="menu-icon"> Dashboard</a>
+        <a href="calculator.html"><img src="resources/calcu icon.png" class="menu-icon"> Calculator</a>
+        <a href="save-results.html"><img src="resources/results icon.png" class="menu-icon"> Results</a>
+        <a href="profile.html"><img src="resources/profile icon.png" class="menu-icon"> Profile</a>
+        <a href="index.html" class="logout-link"><img src="resources/logout icon.png" class="menu-icon"> Logout</a>
       </nav>
     </aside>
 
     <!-- MAIN CONTENT -->
     <main class="main">
       <header class="header">
-        <h1>Hello, Marchael! 👋</h1>
+        <h1 id="greeting">Hello! 👋</h1>
         <p>Welcome to WattsUp! View All Your Bills</p>
+        <!-- Local results are persisted in-browser; no automatic/manual sync UI shown -->
       </header>
 
       <!-- ALL BILLS SECTION -->
@@ -51,18 +58,177 @@
               <th>Total</th>
             </tr>
           </thead>
-
-          <tbody>
-            <tr>
-              <td>October</td><td>2025</td><td>420 kWh</td><td>$0.36</td><td>$151.2</td>
-            </tr>
-            <tr>
-              <td>December</td><td>2024</td><td>420 kWh</td><td>$0.36</td><td>$152.1</td>
-            </tr>
-            <tr>
-              <td>September</td><td>2023</td><td>420 kWh</td><td>$0.36</td><td>$153.4</td>
-            </tr>
+          <tbody id="allResultsBody">
           </tbody>
+        </table>
+
+        <!-- View Modal for All Bills -->
+        <div id="viewModalAll" class="modal-overlay" style="display:none;" onclick="if(event.target===this) closeViewModalAll()">
+          <div class="modal" role="dialog" aria-modal="true" aria-labelledby="viewTitleAll">
+            <h3 id="viewTitleAll">Bill Details</h3>
+            <div class="row"><strong>Month</strong><span id="a_month"></span></div>
+            <div class="row"><strong>kWh</strong><span id="a_kwh"></span></div>
+            <div class="row"><strong>Rate</strong><span id="a_rate"></span></div>
+            <div class="row"><strong>Total</strong><span id="a_total"></span></div>
+            <div class="row"><strong>Saved</strong><span id="a_time"></span></div>
+            <div class="actions"><button class="btn-secondary" onclick="closeViewModalAll()">Close</button></div>
+          </div>
+        </div>
+
+        <!-- Delete Confirmation Modal for All Bills -->
+        <div id="confirmModalAll" class="modal-overlay" style="display:none;" onclick="if(event.target===this) cancelDeleteAll()">
+          <div class="modal" role="dialog" aria-modal="true" aria-labelledby="confirmTitleAll">
+            <h3 id="confirmTitleAll">Confirm Deletion</h3>
+            <p class="confirm-message">Are you sure you want to permanently delete this record? This action cannot be undone.</p>
+            <div class="actions">
+              <button class="btn-secondary" onclick="cancelDeleteAll()">Cancel</button>
+              <button id="confirmDeleteBtnAll" class="btn-primary">Delete</button>
+            </div>
+          </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+        <script src="js/supabase-config.js"></script>
+        <script src="js/supabase-client.js"></script>
+
+        <script>
+          function formatCurrency(n){ return '₱ ' + Number(n).toFixed(2); }
+
+          async function loadUserGreeting(){
+            try{
+              const user = await getCurrentUser();
+              if (user){
+                const fullName = user.user_metadata?.full_name || user.email?.split('@')[0] || 'User';
+                const firstName = fullName.split(' ')[0];
+                const greetingEl = document.getElementById('greeting');
+                if (greetingEl){
+                  greetingEl.innerText = `Hello, ${firstName}! 👋`;
+                }
+              }
+            }catch(e){
+              console.warn('Error loading user greeting:', e);
+            }
+          }
+
+          async function loadAllResults(){
+            const tbody = document.getElementById('allResultsBody');
+            tbody.innerHTML = '';
+
+            // Load user greeting
+            await loadUserGreeting();
+
+            // Try Supabase first when authenticated
+            try{
+              if (window.getCurrentUser && typeof window.getCurrentUser === 'function'){
+                const { user } = await window.getCurrentUser();
+                if (user){
+                  const res = await window.fetchRecentCalculations(100);
+                  if (res && res.data){
+                    const rows = res.data;
+                    rows.forEach(rec => {
+                      const date = new Date(rec.created_at || rec.timestamp);
+                      const year = date.getFullYear();
+                      const time = date.toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'});
+                      const tr = document.createElement('tr');
+                      tr.innerHTML = `
+                        <td>${rec.month}</td>
+                        <td>${year}</td>
+                        <td>${rec.kwh} kWh</td>
+                        <td>${formatCurrency(rec.rate)}</td>
+                        <td>${formatCurrency(rec.total)}</td>
+                        <td>
+                          <button class="view-btn" onclick="showViewModalAll('${rec.id}')">View</button>
+                          <button class="delete-btn" onclick="confirmDeleteSupabaseAll('${rec.id}')">🗑</button>
+                        </td>
+                      `;
+                      tbody.appendChild(tr);
+                    });
+                    return;
+                  }
+                }
+              }
+            }catch(e){ console.warn('Supabase load failed, falling back to localStorage', e); }
+
+            // Fallback to localStorage (namespaced per user when available)
+            const saved = (window.getLocalSavedBills) ? await window.getLocalSavedBills() : JSON.parse(localStorage.getItem('savedBills') || '[]');
+            saved.forEach(rec => {
+              const date = new Date(rec.timestamp);
+              const year = date.getFullYear();
+              const tr = document.createElement('tr');
+              tr.innerHTML = `
+                <td>${rec.month}</td>
+                <td>${year}</td>
+                <td>${rec.kwh} kWh</td>
+                <td>${formatCurrency(rec.rate)}</td>
+                <td>${formatCurrency(rec.total)}</td>
+                <td>
+                  <button class="view-btn" onclick="viewLocalRecordAll('${rec.timestamp}')">View</button>
+                  <button class="delete-btn" onclick="deleteLocalRecordAll('${rec.timestamp}')">🗑</button>
+                </td>
+              `;
+              tbody.appendChild(tr);
+            });
+          }
+
+          function viewLocalRecordAll(ts){
+            (async ()=>{
+              const saved = (window.getLocalSavedBills) ? await window.getLocalSavedBills() : JSON.parse(localStorage.getItem('savedBills') || '[]');
+              const rec = saved.find(r=> r.timestamp === ts);
+              if(rec) alert(`Month: ${rec.month}\nKWh: ${rec.kwh}\nRate: ₱ ${rec.rate}\nTotal: ₱ ${rec.total}`);
+            })();
+          }
+
+          function deleteLocalRecordAll(ts){
+            (async ()=>{
+              if (!confirm('Are you sure you want to permanently delete this record? This action cannot be undone.')) return;
+              const saved = (window.getLocalSavedBills) ? await window.getLocalSavedBills() : JSON.parse(localStorage.getItem('savedBills') || '[]');
+              const remaining = saved.filter(r=> r.timestamp !== ts);
+              if (window.setLocalSavedBills) await window.setLocalSavedBills(remaining); else localStorage.setItem('savedBills', JSON.stringify(remaining));
+              loadAllResults();
+            })();
+          }
+
+          function showViewModalAll(id){
+            // fetch by id from supabase
+            (async ()=>{
+              try{
+                const { data, error } = await window.supabaseClient.from('calculations').select('*').eq('id', id).single();
+                if (error || !data) { alert('Record not found'); return; }
+                const rec = data;
+                document.getElementById('a_month').innerText = rec.month;
+                document.getElementById('a_kwh').innerText = rec.kwh + ' kWh';
+                document.getElementById('a_rate').innerText = formatCurrency(rec.rate);
+                document.getElementById('a_total').innerText = formatCurrency(rec.total);
+                document.getElementById('a_time').innerText = new Date(rec.created_at).toLocaleString();
+                document.getElementById('viewModalAll').style.display = 'flex';
+              }catch(e){ alert('Failed to load record'); }
+            })();
+          }
+
+          function closeViewModalAll(){ document.getElementById('viewModalAll').style.display = 'none'; }
+
+          function cancelDeleteAll(){ document.getElementById('confirmModalAll').style.display = 'none'; }
+
+          function confirmDeleteSupabaseAll(id){
+            const btn = document.getElementById('confirmDeleteBtnAll');
+            btn.onclick = function(){ performDeleteAll(id); };
+            document.getElementById('confirmModalAll').style.display = 'flex';
+          }
+
+          async function performDeleteAll(id){
+            try{
+              const { data, error } = await window.supabaseClient.from('calculations').delete().eq('id', id);
+              if (error) { alert('Delete failed: ' + error.message); return; }
+              cancelDeleteAll();
+              loadAllResults();
+            }catch(e){ alert('Delete failed'); }
+          }
+
+          document.addEventListener('DOMContentLoaded', async () => {
+            await initAuth(); // Protect page - redirect if not authenticated
+            loadAllResults();
+          });
+        </script>
         </table>
       </section>
 
